src/test/run-pass/fn-bare-anon.rs
fn main() {
    let f: fn() = fn () {
        log "This is a bare function"
    };
    f();
}